--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -67,7 +67,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:id="@+id/spinner"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:spinnerMode="dialog"
         android:prompt="@string/app_name" />
 
